fdo#60712 - Inherits cell styles in inserting rows/columns

Add the code to copy cell styles from the caret row/column
to new rows/columns. The span is also copiedl.

Change-Id: I39596a33141ed2159ea2d09e422892cbd68cd81a
Reviewed-on: https://gerrit.libreoffice.org/10373
Reviewed-by: Kohei Yoshida <libreoffice@kohei.us>
Tested-by: Kohei Yoshida <libreoffice@kohei.us>
(cherry picked from commit 9bfd1aced3da2aab9df3fc6f93543a5b6b1075b6)